--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
 </head>
 
 <body>
+<!-- Left Side Header -->
+<aside id="left-header">
+    <div id="logo">
+        <h1>JS Quiz</h1>
+    </div>
+    <nav>
+        <ul>
+            <li><a href="#" id="load-1-10">1-10</a></li>
+            <li><a href="#" id="load-11-20">11-20</a></li>
+            <li><a href="#" id="load-21-30">21-30</a></li>
+        </ul>
+    </nav>
+</aside>
 
 <div id="quiz-container">
     <div id="question">Question</div>
