--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     </div>
     <nav>
         <ul>
-            <li><a href="#" id="load-1-10">1-10</a></li>
-            <li><a href="#" id="load-11-20">11-20</a></li>
-            <li><a href="#" id="load-21-30">21-30</a></li>
+            <li><a href="#" id="load-1-10"><span>1-10</span></a></li>
+            <li><a href="#" id="load-11-20"><span>11-20</span></a></li>
+            <li><a href="#" id="load-21-30"><span>21-30</span></a></li>
+            <li><a href="#" id="load-31-40"><span>31-40</span></a></li>
         </ul>
     </nav>
 </aside>
